# custom_op

./: clean.sh  configure.sh  pyproject.toml  setup.cfg  setup.py
pytorch_test/: test_add.py
src/: bind.cpp  cuda_ops.h
src/add/cuda/: op.cu
src/add/opencl/: add.cl  my_add_op.cpp
src/cpp/: op.cpp
src/cu/: add.cu
